--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,15 @@
 /build/Debug/*.ilk
 /build/Debug/*.pdb
 /build/Debug/Ess3D.dll
-/build/Debug/Demo/Shaders
-/build/Debug/Demo/Sounds
-/build/Debug/Demo/Textures
-/build/Debug/Demo/GUI
+/build/Debug/Shaders
+/build/Debug/Sounds
+/build/Debug/Textures
+/build/Debug/GUI
 /build/Release/Ess3D.dll
-/build/Release/Demo/Shaders
-/build/Release/Demo/Sounds
-/build/Release/Demo/Textures
-/build/Release/Demo/GUI
+/build/Release/Shaders
+/build/Release/Sounds
+/build/Release/Textures
+/build/Release/GUI
 /build/Debug/*.log
 /build/DebugNCP
 /build/Release/CEGUI.log
