Remove unused build config + make resource folders lowercase + cleanup unused DLL + better structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,19 @@
 /build/Debug/*.ilk
 /build/Debug/*.pdb
 /build/Debug/Ess3D.dll
-/build/Debug/Shaders
-/build/Debug/Sounds
-/build/Debug/Textures
-/build/Debug/GUI
+/build/Debug/shaders
+/build/Debug/sounds
+/build/Debug/textures
+/build/Debug/gui
 /build/Release/Ess3D.dll
-/build/Release/Shaders
-/build/Release/Sounds
-/build/Release/Textures
-/build/Release/GUI
+/build/Release/shaders
+/build/Release/sounds
+/build/Release/textures
+/build/Release/gui
 /build/Debug/*.log
-/build/DebugNCP
 /build/Release/CEGUI.log
-/cmake-build-debug
+/cmake-build-debug/
+/cmake-build-release/
 out
 Debug/vs-dapong.vcxprojAssemblyReference.cache
 Debug/vs-dapong.log
@@ -23,6 +23,4 @@ Debug/vs-dapong.log
 /build/Debug/pong.lib
 /build/Release/pong.exe
 /build/Release/pong.exe.manifest
-/cmake-build-debugncp/
-/cmake-build-release/
 /Release/
