--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,26 +6,26 @@ project(pong CXX)
 
 set(Header_Files
     "Game.h"
-    "GameplayScreen.h"
+    "screens/GameplayScreen.h"
     "SceneRenderer.h"
-    "ScreenIndices.h"
-    "model/Ball.h"
+    "screens/ScreenIndices.h"
+    "models/Ball.h"
 )
 source_group("Header Files" FILES ${Header_Files})
 
 set(Source_Files
     "Bootstrap.cpp"
     "Game.cpp"
-    "GameplayScreen.cpp"
+    "screens/GameplayScreen.cpp"
     "SceneRenderer.cpp"
-    "model/Ball.cpp"
+    "models/Ball.cpp"
 )
 source_group("Source Files" FILES ${Source_Files})
 
 set(ALL_FILES
     ${no_group_source_files}
     ${Header_Files}
-    ${Source_Files} model/Entity.cpp model/Entity.h)
+    ${Source_Files} models/Entity.cpp models/Entity.h World.cpp World.h)
 
 ################################################################################
 # Target
@@ -43,7 +43,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 ################################################################################
 set_target_properties(${PROJECT_NAME} PROPERTIES
     OUTPUT_DIRECTORY_DEBUG    "${CMAKE_CURRENT_SOURCE_DIR}/../build/$<CONFIG>/"
-    OUTPUT_DIRECTORY_DEBUGNCP "${CMAKE_CURRENT_SOURCE_DIR}/../build/$<CONFIG>/"
     OUTPUT_DIRECTORY_RELEASE  "${CMAKE_CURRENT_SOURCE_DIR}/../build/$<CONFIG>/"
 )
 set_target_properties(${PROJECT_NAME} PROPERTIES
@@ -54,11 +53,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 ################################################################################
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     "$<$<CONFIG:Debug>:"
-        "_DEBUG;"
-        "_CONSOLE;"
-        "_MBCS"
-    ">"
-    "$<$<CONFIG:DebugNCP>:"
         "_DEBUG;"
         "_CONSOLE;"
         "_MBCS"
@@ -82,10 +76,6 @@ if(MSVC)
             /Od;
             ${DEFAULT_CXX_DEBUG_RUNTIME_LIBRARY}
         >
-        $<$<CONFIG:DebugNCP>:
-            /Od;
-            ${DEFAULT_CXX_DEBUG_RUNTIME_LIBRARY}
-        >
         $<$<CONFIG:Release>:
             /O2;
             /Oi;
@@ -101,12 +91,6 @@ if(MSVC)
     )
     target_link_options(${PROJECT_NAME} PRIVATE
         $<$<CONFIG:Debug>:
-            /DEBUG;
-            /SUBSYSTEM:CONSOLE;
-            /INCREMENTAL;
-            /verbose:lib
-        >
-        $<$<CONFIG:DebugNCP>:
             /DEBUG;
             /SUBSYSTEM:CONSOLE;
             /INCREMENTAL;
@@ -129,7 +113,7 @@ add_custom_command(
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/Ess3D.dll ${OUTPUT_DIRECTORY}
     COMMAND ${CMAKE_COMMAND} -E copy "$<$<CONFIG:Debug>:${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/Ess3D.pdb>$<$<CONFIG:Release>:${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/Ess3D.dll>" ${OUTPUT_DIRECTORY}
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/source/Ess3D/resources/shaders/ ${OUTPUT_DIRECTORY}/Shaders
-    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/Resources/ ${OUTPUT_DIRECTORY}
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resources/ ${OUTPUT_DIRECTORY}
 )
 
 ################################################################################
@@ -143,9 +127,6 @@ set(ADDITIONAL_LIBRARY_DEPENDENCIES
     "$<$<CONFIG:Debug>:"
     "Ess3D"
     ">"
-    "$<$<CONFIG:DebugNCP>:"
-    "Ess3D"
-    ">"
     "$<$<CONFIG:Release>:"
     "Ess3D"
     ">"
@@ -154,9 +135,6 @@ target_link_libraries(${PROJECT_NAME} PUBLIC "${ADDITIONAL_LIBRARY_DEPENDENCIES}
 
 target_link_directories(${PROJECT_NAME} PUBLIC
     "$<$<CONFIG:Debug>:"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/Debug/Ess3D/;"
-    ">"
-    "$<$<CONFIG:DebugNCP>:"
     "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/Debug/Ess3D/;"
     ">"
     "$<$<CONFIG:Release>:"
