--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /build/Debug/sounds
 /build/Debug/textures
 /build/Debug/gui
+/build/Debug/pong
 /build/Release/Ess3D.dll
 /build/Release/shaders
 /build/Release/sounds
@@ -31,3 +32,4 @@ x64/Debug/vc142.idb
 x64/Debug/vc142.pdb
 *.log
 x64/Debug/vs-dapong.vcxproj.FileListAbsolute.txt
+
