Set C++ Standard and a bit of CMakeLists cleanup

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -35,6 +35,8 @@ SET(ALL_FILES
 ################################################################################
 ADD_EXECUTABLE(${PROJECT_NAME} ${ALL_FILES})
 
+SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+
 USE_PROPS(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
 SET(ROOT_NAMESPACE Test)
 
@@ -120,12 +122,6 @@ IF (MSVC)
         )
 ENDIF (MSVC)
 
-IF (UNIX)
-    ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/libEss3D.so ${OUTPUT_DIRECTORY}
-        )
-ENDIF (UNIX)
-
 ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/source/Ess3D/resources/shaders/ ${OUTPUT_DIRECTORY}/shaders
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resources/ ${OUTPUT_DIRECTORY}
@@ -139,22 +135,12 @@ ADD_DEPENDENCIES(${PROJECT_NAME}
     )
 
 SET(ADDITIONAL_LIBRARY_DEPENDENCIES
-    "$<$<CONFIG:Debug>:"
     "Ess3D"
-    ">"
-    "$<$<CONFIG:Release>:"
-    "Ess3D"
-    ">"
     )
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC "${ADDITIONAL_LIBRARY_DEPENDENCIES}")
 
 TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PUBLIC
-    "$<$<CONFIG:Debug>:"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/Debug/Ess3D/;"
-    ">"
-    "$<$<CONFIG:Release>:"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/Release/Ess3D/;"
-    ">"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/;"
     )
 
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
