Renamed dependency folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "src"]
-	path = src
-	url = https://github.com/raizenpk/Ess3D.git
-[submodule "Ess3D"]
-	path = Ess3D
-	url = https://github.com/raizenpk/Ess3D.git
-[submodule "lib/Ess3D"]
-	path = lib/Ess3D
+[submodule "extern/Ess3D"]
+	path = extern/Ess3D
 	url = https://github.com/raizenpk/Ess3D.git
