--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -28,7 +28,8 @@ SET(ALL_FILES
     ${Source_Files}
     models/Entity.cpp models/Entity.h
     game/World.cpp game/World.h
-    game/Scene.cpp game/Scene.h)
+    game/Scene.cpp game/Scene.h
+    )
 
 ################################################################################
 # Target
@@ -40,15 +41,12 @@ SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
 USE_PROPS(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
 SET(ROOT_NAMESPACE Test)
 
-SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
-    VS_GLOBAL_KEYWORD "Win32Proj"
-    )
 ################################################################################
 # Output directory
 ################################################################################
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
-    OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/../build/$<CONFIG>/"
-    OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/../build/$<CONFIG>/"
+    OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/../build/${PLATFORM_ARCHITECTURE}/$<CONFIG>/"
+    OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/../build/${PLATFORM_ARCHITECTURE}/$<CONFIG>/"
     )
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
     INTERPROCEDURAL_OPTIMIZATION_RELEASE "TRUE"
@@ -61,20 +59,19 @@ IF (MSVC)
     ################################################################################
     # Compile definitions
     ################################################################################
+
     TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE
         "$<$<CONFIG:Debug>:"
         "_DEBUG;"
         "_CONSOLE;"
-        "_MBCS"
         ">"
         "$<$<CONFIG:Release>:"
         "NDEBUG;"
-        "UNICODE;"
-        "_UNICODE"
         ">"
         "WIN32;"
-        "_LIB;"
-        "_CRT_SECURE_NO_WARNINGS"
+        "_CRT_SECURE_NO_WARNINGS;"
+        "UNICODE;"
+        "_UNICODE;"
         )
 
     TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE
@@ -95,6 +92,7 @@ IF (MSVC)
         ${DEFAULT_CXX_EXCEPTION_HANDLING};
         /Y-
         )
+
     TARGET_LINK_OPTIONS(${PROJECT_NAME} PRIVATE
         $<$<CONFIG:Debug>:
         /DEBUG;
@@ -104,11 +102,13 @@ IF (MSVC)
         >
         $<$<CONFIG:Release>:
         /SUBSYSTEM:WINDOWS;
+        /ENTRY:wmainCRTStartup
         /OPT:REF;
         /OPT:ICF;
         /INCREMENTAL:NO
         >
         )
+
 ENDIF ()
 
 ################################################################################
@@ -117,13 +117,14 @@ ENDIF ()
 
 IF (MSVC)
     ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/Ess3D.dll ${OUTPUT_DIRECTORY}
-        COMMAND ${CMAKE_COMMAND} -E copy "$<$<CONFIG:Debug>:${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/Ess3D.pdb>$<$<CONFIG:Release>:${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/Ess3D.dll>" ${OUTPUT_DIRECTORY}
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/Ess3D/build/Ess3D/${PLATFORM_ARCHITECTURE}/$<CONFIG>/Ess3D.dll ${OUTPUT_DIRECTORY}
+        COMMAND ${CMAKE_COMMAND} -E copy "$<$<CONFIG:Debug>:${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/Ess3D/build/Ess3D/${PLATFORM_ARCHITECTURE}/$<CONFIG>/Ess3D.pdb>$<$<CONFIG:Release>:${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/Ess3D/build/Ess3D/${PLATFORM_ARCHITECTURE}/$<CONFIG>/Ess3D.dll>" ${OUTPUT_DIRECTORY}
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/Ess3D/dependencies/bin/${PLATFORM_ARCHITECTURE}/$<CONFIG> ${OUTPUT_DIRECTORY}
         )
 ENDIF (MSVC)
 
 ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/source/Ess3D/resources/shaders/ ${OUTPUT_DIRECTORY}/shaders
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/Ess3D/source/Ess3D/resources/shaders/ ${OUTPUT_DIRECTORY}/shaders
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resources/ ${OUTPUT_DIRECTORY}
     )
 
@@ -140,9 +141,9 @@ SET(ADDITIONAL_LIBRARY_DEPENDENCIES
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC "${ADDITIONAL_LIBRARY_DEPENDENCIES}")
 
 TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PUBLIC
-    "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/build/$<CONFIG>/Ess3D/;"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/Ess3D/build/Ess3D/${PLATFORM_ARCHITECTURE}/$<CONFIG>/;"
     )
 
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
-    "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Ess3D/source/;"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/Ess3D/source/;"
     )
