--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "extern/Ess3D"]
-	path = extern/Ess3D
-	url = https://github.com/raizenpk/Ess3D.git
+[submodule "dependencies/Ess3D"]
+	path = dependencies/Ess3D
+	url = https://github.com/essar05/Ess3D.git
